# blue-archive-viewer

./: .gitignore  Cargo.toml  README.md  deno.json  info.txt  next.config.js  package-lock.json  package.json  requirements.txt  tsconfig.json  version.json
.github/workflows/: fetch.yaml  generate_jp.yml  update_en.yaml  update_jp.yaml  wallpaper_engine.yml
app/: layout.tsx  page.tsx
app/api/download/: route.ts
app/component/: accordion.tsx  box.tsx  button.tsx  input_chekcbox.tsx  input_number.tsx  input_select.tsx  modal.tsx  navbar.tsx  progress_bar.tsx
app/en/: page.tsx
app/en/live2d/: page.tsx
app/jp/: page.tsx  url.tsx
app/jp/gallery/: image.tsx  page.tsx
app/jp/live2d/: base_page.tsx  bgm.tsx  character.tsx  events.tsx  exporter.tsx  model.tsx  page.tsx  subtitle.tsx  toast.tsx
app/jp/table/: academy_favor_schedule.tsx  character.tsx  character_dialog.tsx  index.tsx  localize_char_profile.tsx  memory_lobby.tsx  scenario_script_favor.tsx
app/lib/: get_origin.tsx  live2d_viewer.tsx  live2d_wallpaper_engine.tsx
app/lib/table/: academy_favor_schedule.tsx  character.tsx  character_dialog.tsx  index.tsx  localize_char_profile.tsx  memory_lobby.tsx  types.ts  util.tsx
app/wpengine/: page.tsx  subtitle.tsx  table.tsx
flatc/: en.fbs  jp.fbs
public/data/en/: AddressableCatalog.json  resource-data.json  version.txt
public/data/jp/: AddressableCatalog.json  GameMainConfig.json  changelog.json  version.txt
public/wallpaper_engine/: index.html
public/wallpaper_engine/wpengine/: page.js  (+2 more)
py/: en.py  jp.py  main.py  wallpaper_engine.py  wallpaper_engine_public.py
py/lib/: TableEncryptionService.py  TableService.py  downloader.py
scripts/: runner.ts
scripts/runner/: data.ts  project.ts
src/: catalog.rs  cg.rs  consts.rs  live2d.rs  logger.rs  main.rs  table_dumper.rs  voice.rs
src/api/: mod.rs
src/app/: jp.rs
src/flatbuffers/: en_generated.rs  en_impl.rs  jp_generated.rs  jp_impl.rs  mod.rs
src/mx/: data.rs
src/table_dumper/: en.rs  jp.rs  mod.rs
src/util/: common.rs  downloader.rs  mod.rs  table_service.rs  unityfs.rs
(+552 files in other folders)
