[package]
name = "blue-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
io_unity = "0.3.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand_mt = "4.2.2"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
trauma = "2.2.4"
unity_rs = "0.1.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh32"] }
zip = "2.1.0"
