[package]
name = "blue-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
astc-decode = "0.3.1"
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
crc32fast = "1.4.2"
flatbuffers = { version = "24.3.25", features = ["serialize"] }
image = "0.25.1"
log = "0.4.21"
num_enum = "0.7.2"
paris = { version = "1.5.15", features = ["macros"] }
rand_mt = "4.2.2"
regex = "1.10.4"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlite = { version = "0.36.0", features = ["bundled"] }
tokio = { version = "1.37.0", features = ["full"] }
trauma = "2.2.4"
unity_rs = "0.1.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh32"] }
zip = "2.1.0"
